# sunman

./: .gitignore  README.org  builder.py  flake.nix  formula.dhall  meta.tsv  package.yaml  sunman.cabal
app/: Main.hs
data/: 特码字.tsv  特码词.tsv
src/: Main.hs
